--- a/.github/workflows/docker-publish-sign.yml
+++ b/.github/workflows/docker-publish-sign.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           context: ./HomeLab.CookBook/
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: v1,latest
           labels: ${{ steps.meta.outputs.labels }}
 
       # Sign the resulting Docker image digest except on PRs.
