--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -26,7 +26,7 @@ jobs:
           files: |
             docker
       - name: Automated Version Bump
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        if: steps.changed-files-specific.outputs.other_changed_files == 'true'
         id: version-bump
         uses: 'phips28/gh-action-bump-version@master'
         env:
@@ -36,13 +36,13 @@ jobs:
           commit-message: 'CI: Bump Image version to {{version}}'
 
       - name: Output Step
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        if: steps.changed-files-specific.outputs.other_changed_files == 'true'
         env:
           NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
         run: echo "new tag $NEW_TAG"
 
       - name: Log into registry ${{ env.REGISTRY }}
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        if: steps.changed-files-specific.outputs.other_changed_files == 'true'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
@@ -50,7 +50,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        if: steps.changed-files-specific.outputs.other_changed_files == 'true'
         uses: docker/build-push-action@v2
         with:
           context: ./HomeLab.CookBook/
