--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -46,8 +46,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         if: steps.changed-files-specific.outputs.all_changed_files != ''
