--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Log into registry ${{ env.REGISTRY }}
         if: steps.changed-files-specific.outputs.all_changed_files != ''
-        uses: docker/login-action@v1
+        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
