--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -53,10 +53,13 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: downcase IMAGE_NAME
-        run: |
-          echo "IMAGE_NAME=${env.IMAGE_NAME,,}" >>${GITHUB_ENV}
+         
+      - id: downcase IMAGE_NAME
+        uses: ASzc/change-string-case-action@v2
+        with:
+          string: ${{env.IMAGE_NAME}}
+      - id: step2
+        run: echo ${{ steps.string.outputs.lowercase }}  
         
       - name: Build and push Docker image
         if: steps.changed-files-specific.outputs.all_changed_files != ''
@@ -64,5 +67,5 @@ jobs:
         with:
           context: ./HomeLab.CookBook/
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${REPO}:latest, ${REPO}:${{ steps.version-bump.outputs.newTag }}
+          tags: ${{ steps.string.outputs.lowercase }}:latest, ${{ steps.string.outputs.lowercase }}:${{ steps.version-bump.outputs.newTag }}
  
