--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -54,10 +54,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
          
-      - name: downcase
+      - id: downcase
         uses: ASzc/change-string-case-action@v2
         with:
           string: ${{env.IMAGE_NAME}}
+      - id: step2
+        run: echo ${{ steps.string.outputs.lowercase }}
         
       - name: Build and push Docker image
         if: steps.changed-files-specific.outputs.all_changed_files != ''
