--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -62,5 +62,6 @@ jobs:
           push: true
           tags: ${{ steps.imagename.outputs.lowercase }}:latest, ${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
           labels: ${{ steps.meta.outputs.labels }}
-          
+          secrets: |
+            "github_token=${{ secrets.GITHUB_TOKEN }}"
 
