--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           context: ./HomeLab.CookBook/
           push: true
-          tags: ${{ steps.imagename.outputs.lowercase }}:latest, ${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
+          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest, ghcr.io/${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
