--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -1,11 +1,9 @@
 name: Docker-Release
 
 on:
-  push:
-    branches: [ 'develop' ]
-    tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ 'develop' ]
+    branches:    
+      - 'release'
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -28,6 +26,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: patch
+          RELEASE_BRANCHES: release
 
       - name: Output Step
         env:
