--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -27,6 +27,11 @@ jobs:
           WITH_V: true
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: release
+          SOURCE: .
+          DRY_RUN: false
+          INITIAL_VERSION: 0.0.1
+          PRERELEASE_SUFFIX: prerelease
+          VERBOSE: true
 
       - name: Output Step
         env:
