--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -1,7 +1,9 @@
 name: Docker-Release
 
 on:
-  pull_request:
+  pull_request_target:
+    types:
+      - closed
     branches:    
       - 'release'
 
@@ -14,7 +16,7 @@ env:
 jobs:
   release:
     runs-on: ubuntu-latest
-
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout source code
         uses: 'actions/checkout@v2'
