Service cleanup and fixes

--- a/HomeLab.CookBook/HomeLab.CookBook.Api/appsettings.Development.json
+++ b/HomeLab.CookBook/HomeLab.CookBook.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.104;Port=5432;Database=CookBook;Userid=postgre;Password=nar8thera;"
+    "DefaultConnection": "Server=192.168.1.206;Port=5432;Database=CookBook.Dev;Userid=postgres;Password=TUPms4k@Homelab;"
   },
   "IdentitySettings": {
     "Authority": "https://localhost:5001"
