--- a/HomeLab.CookBook/HomeLab.CookBook.Api/appsettings.Acceptance.json
+++ b/HomeLab.CookBook/HomeLab.CookBook.Api/appsettings.Acceptance.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.104;Port=5432;Database=CookBook;Userid=postgre;Password=nar8thera;"
+    "DefaultConnection": "Server=192.168.1.211;Port=5432;Database=CookBook;Userid=galpaul96;Password=nar8thera;"
   },
   "IdentitySettings": {
     "Authority": "https://localhost:5001"
