--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -4,8 +4,9 @@ on:
   pull_request_target:
     types:
       - closed
-    branches:    
-      - 'release'
+    branches:
+      - develop
+      - release
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -93,13 +94,24 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
+            
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: ./HomeLab.CookBook/
           push: true
-          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest, ghcr.io/${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
+          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
+          labels: ${{ steps.meta.outputs.labels }}
+          secrets: |
+            "github_token=${{ secrets.GITHUB_TOKEN }}"
+            
+      - name: Build and push Docker image
+        if: github.ref == 'refs/heads/release'
+        uses: docker/build-push-action@v2
+        with:
+          context: ./HomeLab.CookBook/
+          push: true
+          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
