--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -5,7 +5,6 @@ on:
     types:
       - closed
     branches:
-      - develop
       - release
 
 env:
@@ -98,20 +97,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./HomeLab.CookBook/
+          context: ./HomeLab/
           push: true
-          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
-          labels: ${{ steps.meta.outputs.labels }}
-          secrets: |
-            "github_token=${{ secrets.GITHUB_TOKEN }}"
-            
-      - name: Build and push Docker image
-        if: github.ref == 'refs/heads/release'
-        uses: docker/build-push-action@v2
-        with:
-          context: ./HomeLab.CookBook/
-          push: true
-          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest
+          tags: ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest, ghcr.io/${{ steps.imagename.outputs.lowercase }}:${{ steps.version-bump.outputs.new_tag }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
